Small changes in the tests